--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -18,7 +18,7 @@
             Access your employer dashboard
         </p>
 
-        <form method="POST" class="mt-6 space-y-4">
+       <form method="POST" action="{% url 'login' %}" class="mt-6 space-y-4">
             {% csrf_token %}
 
             <!-- USERNAME -->
